[package]
name = "kvs"
version = "0.2.0"
authors = ["Luis Moreno <morenoluisma@gmail.com>"]
edition = "2018"
description = "KV ruStorage CLI"

[[bin]]

name = 'kvs'
test = false
doctest = true

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
failure = "0.1.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

