[package]
name = "kvs"
version = "0.2.0"
authors = ["Luis Moreno <morenoluisma@gmail.com>"]
edition = "2018"
description = "KV ruStorage CLI"

[[bin]]

name = 'kvs-client'
test = false
doctest = true

[[bin]]
name = "kvs-server"
test = false
doctest = true

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
failure = "0.1.5"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
sled = "0.31.0"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.5.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
